--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<h1>hello, my world</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title></title>
+  </head>
+  <body>
+    <h1>hello, my world</h1>
+    <p>Call me blessed</p>
+  </body>
+</html>
